Changelog
=========


2.0.3 (unreleased)
------------------

- Activate sequenceNumber and referencenumber giving for mails.
  Mark mails as BaseDocument (activate different adapters).
  Issue #1507 Mails: Dokumentennummer/Aktenzeichen fehlt
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1507
  [phgross]



2.0.2 (2012-03-28)
------------------

- Fixed mail date indexers: return datetime.date objects like in og.document.
  Issue #1453 Sortierung nach Dokument Datum in der Dokumentenauflistung korrigieren.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1453
  [phgross]


2.0.1 (2012-02-27)
------------------

- Added French translations.
  [ttschanz]

- Made send_document journalizable.
  [ttschanz]

- Add DocumentSent event.
  [ttschanz]

- Added necessary permissions for Administrator role
  [lgraf]


2.0 (2011-11-17)
----------------

- Final release
  [phgross]


2.0b12 (2011-10-13)
-------------------

- Replace german string with correct translations, in the send_document fucionality.
  [phgross]

- Rebuilding send_document fucionality. Implements mail transfers also for mails.
  Issue #1238 Fehler im DocumentSizeValidator im opengever.mail
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1238/
  [phgross]

- Fixed extract_attachment method, remove line breaks from the attachment filenames.
  Issue #1236 Probleme im inbound mail.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1236
  [phgross]


2.0b11 (2011-10-04)
-------------------

- Removed mail_settings Importstep it isnt needed anymore
  #1204 Absender E-Mail Addresse anpassen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1204
  [ttschanz]

- fixed sortable_author indexer for mails:
  return now the returned value of the document_author method not just the indexerobject.
  Issue #1215 Dokumentenauflistung: sortieren nach Autor dropt Mails