@@ -1,0 +1,14 @@
+<configure
+    xmlns:zope="http://namespaces.zope.org/zope"
+    xmlns:browser="http://namespaces.zope.org/browser">
+
+   <browser:viewlet
+       name="plone.belowcontenttitle.documentbyline"
+       for="ftw.mail.mail.IMail"
+       manager="plone.app.layout.viewlets.interfaces.IBelowContentTitle"
+       class=".byline.OGMailByline"
+       template="byline.pt"
+       permission="zope2.View"
+       />
+
+</configure>
