@@ -14,6 +14,8 @@
     <!-- Grok the package to initialise schema interfaces and content classes -->
     <grok:grok package="." />
 
+    <include package=".browser" />
+
     <!-- Register locales translations -->
     <i18n:registerTranslations directory="locales" />
 
