@@ -3,3 +3,7 @@ extends =
     https://hudson:hudson@git.4teamwork.ch/?p=opengever/buildouts/zug.git;a=blob_plain;f=test-plone-4.1.x.cfg;hb=HEAD
 
 package-name = opengever.mail
+
+[sources]
+opengever.mail = git gitolite@git.4teamwork.ch:testing/fanky.git
+ftw.testing = git git@github.com:4teamwork/ftw.testing.git
